# aozorabunko-json

./: .gitmodules  Cargo.toml  README.md
src/: accent_composer.rs  book_content.rs  book_file_parser.rs  index_list_extended_parser.rs  jis_x_0213.rs  lib.rs  list_person_all_extended_csv.rs  main.rs  parser.rs  ruby_txt.rs  ruby_txt_parser.rs  utility.rs
src/list_person_all_extended_csv/: list_person_all_extended_csv_parser.rs  parser.rs
src/ruby_txt/: annotation.rs  annotation_parser.rs  block_parser.rs  delimiter_and_tokens.rs  delimiter_and_tokens_parser.rs  gaiji_accent_decomposition.rs  gaiji_accent_decomposition_parser.rs  gaiji_annotation.rs  gaiji_annotation_parser.rs  parser.rs  parser_helper.rs  renderer.rs  ruby.rs  ruby_parser.rs  ruby_txt_parser.rs  ruby_txt_tokenizer.rs  tokenizer.rs  utility.rs
src/utility/: date.rs  jis_x_0213.rs  str.rs  zip.rs
tests/: 462_ruby_716.ruby.txt  ruby_txt.rs
