[package]
name = "aozorabunko-json"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
csv = "1.3.0"
encoding_rs = "0.8.33"
getopts = "0.2.21"
indicatif = "0.17.8"
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
zip = "0.6.6"
